--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
   "type": "commonjs",
   "scripts": {
     "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\""
+    "package": "electron-forge package"
   },
   "keywords": [],
   "author": {
